--- a/kube.yaml
+++ b/kube.yaml
@@ -14,6 +14,13 @@ spec:
       - name: results
         image: quay.io/h0tbird/tva-results:latest
         imagePullPolicy: Always
+        resources:
+          limits:
+            cpu: 100m
+            memory: 256Mi
+          requests:
+            cpu: 100m
+            memory: 256Mi
 ---
 kind: Service
 apiVersion: v1
